--- a/html/from_scratch_page.html
+++ b/html/from_scratch_page.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
         <div>
             <ul class="nav-ulist">
-                <li class="nav-list"><a href="../" class="nav-button">Index Page</a></li>
+                <li class="nav-list"><a href="../" class="nav-button">Resume Page</a></li>
                 <li class="nav-list active"><a href="#" class="nav-button">From Scratch Page</a></li>
                 <li class="nav-list" style="float: right;"><a href="#lists" class="nav-button">Jump to Lists (on page)</a></li>
                 <li class="nav-list" style="float: right;"><a href="#viz1697833456408" class="nav-button">Tableau (on page)</a></li>
